# OpenREL

./: .gitignore  README.md  environment.yml  pyproject.toml
src/openrel/: __init__.py
